deprecated 된 메소드 변경